# DATA

./: README.md  agy-pon.md  refactor_paths.py
.obsidian/: workspace.json
.obsidian/themes/Omarchy/: theme.css
BAK 1.0/: SISTEMA BAK 1.0.md  method_generate_docs.py  pon_bak_system.py  setup_bak.sh
Hardware and Software Info/: PON_Aplicacao_Pratica_Tecnologias_Omarchy.txt  PON_Fundamentos_Arquitetura_FBE.txt  PON_Guia_Mestre_Completo_Antigravity.txt  PON_Mapeamento_Diretorios_Otimizacao_Gemini.txt  Relatorio de correções PON.txt  amdy_hardware.txt  amdy_software.txt  tell_hardware.txt  tell_software.txt
kad-1.0/: .env.example  .gitignore  README.md  projeto_kad_1_0.md
kad-1.0/.agents/: AGENTS.md
kad-1.0/.agents/skills/kad_pon/: SKILL.md
kad-1.0/amdy/: pyproject.toml  requirements.txt
kad-1.0/amdy/mcp/: kad_mcp_server.py  mcp_config.json
kad-1.0/amdy/scripts/: install.sh  run-bridge.sh
kad-1.0/amdy/src/: bridge.py  comfyui_client.py  config.py  models.py  odysseus_client.py  redis_listener.py  vectorizer.py
kad-1.0/broker/: docker-compose.yml
kad-1.0/docs/: architecture.md
kad-1.0/odysseus/: docker-compose.yml
kad-1.0/odysseus/static/: index.html
kad-1.0/shared/: redis_channels.hpp  redis_channels.py
kad-1.0/shared/schemas/: extract_result.schema.json  ingest_event.schema.json  vectorize_cmd.schema.json
kad-1.0/tell/: CMakeLists.txt  conanfile.txt
kad-1.0/tell/config/: watch_paths.json
kad-1.0/tell/scripts/: deploy.sh  install-deps.sh
kad-1.0/tell/src/: main.cpp
kad-1.0/tell/src/extractors/: audio_extractor.cpp  extractor_base.hpp  image_extractor.cpp  office_extractor.cpp  pdf_extractor.cpp  text_extractor.cpp
kad-1.0/tell/src/fbe/: fbe_base.cpp  fbe_base.hpp  fbe_extractor.cpp  fbe_extractor.hpp  fbe_tell_storage.cpp  fbe_tell_storage.hpp  shared_attribute.hpp
kad-1.0/tell/src/io/: inotify_watcher.cpp  inotify_watcher.hpp  redis_publisher.cpp  redis_publisher.hpp  redis_subscriber.cpp  redis_subscriber.hpp
kad-1.0/tell/src/pon/: action.cpp  action.hpp  instigation.cpp  instigation.hpp  notifier.cpp  notifier.hpp  premise.cpp  premise.hpp  rule.cpp  rule.hpp
omarchy-dotfiles/: COMMIT_EDITMSG  FETCH_HEAD  config  index
omarchy-dotfiles/logs/: HEAD
omarchy-dotfiles/refs/heads/: main
(+3 files in other folders)
