[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kad-bridge"
version = "1.0.0"
description = "KAD 1.0 - Bridge for routing MQTT events to Odysseus AI"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0"
]
